# LearningGame

./: .gitattributes  .gitignore  .timetracker  2.tor  Cargo.toml  README.md  foo.txt  launch.jsonc  standart.cap  test.cap  test1.tor
.github/workflows/: static.yml
assets/: custom_tester.glb  survival.glb  survival.gltf  tutorial_level.gltf  untitled.glb
assets/components/: laser_mirror.glb  laser_pointer.glb
assets/data/: settings.json
assets/internal/splash/: preview.kra
assets/levels/level_02/: config.json  main.gltf  preview.png.1~
assets/levels/level_02/textures/: 2K-tiling_30_metallic-2K-tiling_30_roughness.basis  2K-tiling_30_normal.basis  Gradient Pallete.basis  PastedImage220104-201001.basis  Wall_01_Base Color.basis  Wall_01_Normal.basis  ceiling_panel_Base_Color.basis  ceiling_panel_Normal.basis  ceiling_panel_Roughness.basis  floor_tiling_basecolor.basis  floor_tiling_normal.basis  floor_tiling_rougness.basis
assets/levels/level_02/textures/temp/: Untitled-1.basis  (+6 more)
assets/levels/level_03/: main.gltf
assets/levels/nah/tutorial_level_old/: Ceiling_Plane_Base.basis  Floor_Base.basis  Floor_Roughness.basis  door_single_Albedo.basis  main.gltf
assets/levels/new_level_01/: config.json  main.gltf
assets/levels/new_level_01/img/: brick wall_BaseColor.basis  brick wall_BaseColor.ktx2
assets/levels/new_level_01/sound/: a1.m4a  a2.m4a  a3.m4a  a4.m4a  a5.m4a  a6.m4a  a7.m4a  a8.m4a  a9.m4a
assets/levels/new_level_02/: config.json  main.gltf
assets/levels/new_level_02/sound/: a1.m4a  a2.m4a  a3.m4a  a4.m4a  a5.m4a  a6.m4a  test_27.doc
assets/levels/new_level_02/web1/: index.html
assets/levels/q_part_2/: Cargo.toml
assets/levels/q_part_2/src/: main.rs
assets/levels/quick_hack/src/: main.rs
assets/levels/some_scratchpad/: main.gltf
assets/levels/test_01/: main.gltf
assets/levels/tutorial_level/: Lamp_glass_Roughness.basis  MetalScratched007_REFL_3K.basis  Smudges_01_4K.basis  WoodFlooring045_COL2_3K.basis  WoodFlooring045_GLOSS_3K.basis  Wool_diffuse.basis  Wool_normal.basis  Wool_roughness.basis  config.json  floor_tiles_06_nor_4k.basis  floor_tiles_06_rough_8k.basis  main.gltf  spruce wood rough clean_normal.basis  spruce wood rough clean_roughness.basis  telephone_DefaultMaterial_Metallic-telephone_DefaultMaterial_Roughness.basis
assets/levels/tutorial_level_micro/: main.gltf
assets/levels/tutorial_level_old/: Side_Base.basis  Side_Roughness.basis  double_door_Albedo.basis  main.gltf
assets/shaders/: post_process_finish_outline.wgsl  post_process_outline_pass.wgsl  post_process_prepare_outline.wgsl
assets/textures/: placement_grid.png~  placement_grid_emissive.png~
blender/: laser_mirror.blend  laser_mirror.blend1  laser_pointer.blend  untitled.blend  untitled.blend1
helper_scripts/glb_edit/: index.js  package.json
imported_assets/: log
imported_assets/Default/internal/shaders/: post_process_outline_pass.wgsl
imported_assets/Default/levels/level_02/: main.gltf
imported_assets/Default/levels/quick_hack/: Cargo.toml
notes/: broadcast_note.md
old_lib/: ___adding_objects.rs  __obsolete_player.rs
old_lib/audio/: mod.rs
old_lib/level_manager/: state.rs
src/: main.rs
src/lib/: adding_objects.rs  audio.rs  colors.rs  main_menu.rs  markers.rs  mod.rs  obsolete_player.rs  player.rs  player_extensions.rs  scene_loader.rs  todo_post_process.rs  transition.rs
src/lib/__placing_parts/: mod.rs
src/lib/audio/: mod.rs
src/lib/broadcast/: _explosion_test_01.rs  ball_falling_01.rs  collision_audio.rs  collision_button.rs  delay.rs  explosion_test_01.rs  full_animation.rs  input_field.rs  light_animation.rs  link_opener.rs  mod.rs  named_animation.rs  one_animation.rs  open_door.rs  stand_button.rs  teleport.rs  test_chamber.rs
src/lib/camera/: _resize.rs  materials.rs  mod.rs  setup.rs
src/lib/hint_overlay/: mod.rs
src/lib/ingame_ui/: mod.rs  systems.rs
src/lib/main_menu/: components.rs  load_settings.rs  mod.rs  ui.rs
src/lib/placing_parts/: mod.rs
src/lib/player_control/: components.rs  mod.rs  systems.rs
src/lib/scene_loading/: attachements.rs  changing_cusom_properties.rs  components.rs  custom_properties.rs  gltf_handling.rs  mod.rs  unload.rs
src/lib/tools/: collision_groups.rs  config.rs  consts.rs  events.rs  markers.rs  mod.rs  resources.rs  transition.rs
testing_substance_painter/: kduribeiro_charset_base_005.fbx  untitled.blend  untitled.blend1  untitled.fbx
website/: example.html
(+5 files in other folders)
