[package]
name = "v0_2023_coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
# [features]
# default = [
#   "bevy/animation",
#   "bevy/bevy_asset",
#   "bevy/bevy_gilrs",
#   "bevy/bevy_scene",
#   "bevy/bevy_winit",
#   "bevy/bevy_core_pipeline",
#   "bevy/bevy_pbr",
#   "bevy/bevy_gltf",
#   "bevy/bevy_render",
#   "bevy/bevy_sprite",
#   "bevy/bevy_text",
#   "bevy/bevy_ui",
#   "bevy/png",
#   "bevy/hdr",
#   "bevy/ktx2",
#   "bevy/zstd",
#   "bevy/vorbis",
#   "bevy/x11",
#   "bevy/filesystem_watcher",
#   "bevy/android_shared_stdcxx",
#   "bevy/tonemapping_luts",
# ]
# 

[dependencies]
# bevy = { version="0.10.1", default-deatures = false }
bevy = "0.10.1"
bevy_editor_pls = "0.4"
bevy_rapier3d = {version="0.21.0", features = ["debug-render-3d", "simd-stable"]}
bevy_renet = "0.0.8"
# bevy_kira_audio = "0.15"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"