[package]
name = "v0_2023_coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
# [features]
# default = [
#   "bevy/animation",
#   "bevy/bevy_asset",
#   "bevy/bevy_gilrs",
#   "bevy/bevy_scene",
#   "bevy/bevy_winit",
#   "bevy/bevy_core_pipeline",
#   "bevy/bevy_pbr",
#   "bevy/bevy_gltf",
#   "bevy/bevy_render",
#   "bevy/bevy_sprite",
#   "bevy/bevy_text",
#   "bevy/bevy_ui",
#   "bevy/png",
#   "bevy/hdr",
#   "bevy/ktx2",
#   "bevy/zstd",
#   "bevy/vorbis",
#   "bevy/x11",
#   "bevy/filesystem_watcher",
#   "bevy/android_shared_stdcxx",
#   "bevy/tonemapping_luts",
# ]
# 

[dependencies]
# bevy = { version="0.10.1", default-deatures = false }
bevy = "0.11.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
bevy_rapier3d = {version="0.22.0", features = ["debug-render-3d", "simd-stable"]}
# bevy_renet = "0.0.8"
# bevy_kira_audio = "0.15"
bevy-debug-text-overlay = "6.0.0"
serde_json = "1.0.0"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"