[package]
name = "v0_2023_coursework"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
bevy = {path = "vendor/bevy"}
bevy_animation = {path = "vendor/bevy_animation"}

[dependencies]
bevy_editor_pls = "0.6"
#bevy_editor_pls = {path="dependencies/bevy_editor_pls-main"}
bevy_rapier3d = {version="0.23.0", features = ["debug-render-3d", "simd-stable"]}
#bevy_rapier3d = {path="dependencies/bevy_rapier-0.23.0", features = ["debug-render-3d", "simd-stable"]}
# bevy_renet = "0.0.8"
bevy_kira_audio = "0.18"
#bevy_kira_audio = {path="dependencies/bevy_kira_audio-main"}
# bevy-debug-text-overlay = "7.0.0"
serde_json = "*"
serde = "*"
webbrowser = "0.8"
itertools = "0.11"
rand = "*"

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
"animation",
"bevy_animation",
"bevy_asset",

#"bevy_audio",     

"bevy_core_pipeline",
"bevy_gilrs",
"bevy_gizmos",
"bevy_gltf",
"bevy_pbr",
"bevy_render",
"bevy_scene",
"bevy_sprite",
"bevy_text",
"bevy_ui",
"bevy_winit",

"default_font",

"hdr",
"ktx2",

"multi-threaded",

"png",

"tonemapping_luts",

"vorbis",

#"webgl2",
"x11",
# "android_shared_stdcxx", # For Android builds, use shared C++ library

# "asset_processor",
"async-io",
"basis-universal",

##!!!!!!!!!!!!!!!!!!!!!!"bevy_dynamic_plugin"

"jpeg",
"wav",

# "bmp",
# "dds", 
# "exr",
# "flac",
# "minimp3",
# "mp3",
# "pnm",
# "symphonia-all",
# "tga",
# "webp",

# "debug_glam_assert",
# "detailed_trace",
# "dynamic_linking",
# "embedded_watcher",
# "file_watcher",
# "glam_assert",


  "zstd",   # ZSTD compression support in KTX2 files
  "zlib",

"pbr_transmission_textures",
"serialize",
"shader_format_glsl",
"shader_format_spirv",
"subpixel_glyph_atlas",

# "trace",
# "trace_chrome",
# "trace_tracy",
# "trace_tracy_memory",
# "wgpu_trace",      # WGPU/rendering tracing


# "wayland",              # Linux: Support Wayland windowing system
# "accesskit_unix",       # AccessKit integration for UI Accessibility
]


[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

[profile.release.package."*"]
opt-level = 3

[profile.release]
codegen-units = 16
lto = "thin"
